--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -24,9 +24,9 @@ custom_template/release=""
 custom_template/debug=""
 application/icon=""
 application/file_version=""
-application/product_version=""
-application/company_name=""
+application/product_version="1.01a"
+application/company_name="Akai Tobira"
 application/product_name=""
 application/file_description=""
-application/copyright=""
+application/copyright="Akai Tobira & KoBeWi"
 application/trademarks=""
