Adding RedGrinder and YellowGrinder.

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -24,9 +24,9 @@ custom_template/release=""
 custom_template/debug=""
 application/icon=""
 application/file_version=""
-application/product_version="1.01a"
+application/product_version="1.21a"
 application/company_name="Akai Tobira"
 application/product_name=""
 application/file_description=""
-application/copyright="Akai Tobira & KoBeWi"
+application/copyright="Akai Tobira"
 application/trademarks=""
